# boulange

./: .gitignore  db.sqlite3  format_code.sh  manage.py  pyproject.toml  requirements.txt
boulange/: BatchSplitter.py  DailyBatches.py  UseCases.md  __init__.py  admin.py  apps.py  forms.py  models.py  serializers.py  tests.py  urls.py  views.py
boulange/migrations/: 0001_initial.py  0002_alter_customer_options_alter_deliverydate_options_and_more.py  0002_auto_20240817_0858.py  0002_ingredients.py  0003_add_recipes.py  0003_alter_customer_options_alter_ingredient_options_and_more.py  0003_customer_boulange_cu_name_f6a126_idx_and_more.py  0004_product_cooked_by_two.py  0004_recipe_coef_recipe_orig_recipe.py  0004_remove_customer_default_delivery_point_and_more.py  0005_add_recipes.py  0005_ingredient_soaking_coef.py  0005_rename_cooked_by_two_product_baked_by_two.py  0006_ingredients_edit.py  0006_product_display_priority.py  0006_remove_order_delivery_point.py  0007_deliverypoint_batch_target.py  0007_edit_brioches.py  0007_product_is_bread.py  0008_alter_recipe_orig_recipe.py  0008_rename_levain.py  0008_settings.py  0009_brioches_too_big.py  0009_ingredient_soaking_ingredient.py  0010_populate_soaking_ingredient.py  0010_remove_customer_boulange_cu_name_f6a126_idx_and_more.py  0011_customer_delivery_point.py  0011_deliverypoint_initial_date.py  0011_remove_ingredient_needs_soaking.py  0012_product_baked_by_batch.py  0012_remove_deliverypoint_boulange_de_name_e978e2_idx_and_more.py  (+21 more)
data/: base.json
resto/: asgi.py  settings.py  urls.py  wsgi.py
(+21 files in other folders)
