[tool.poetry]
name = "boulange"
version = "0.1.0"
description = ""
authors = ["Dominique Eav <dom.eav@franceimpro.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.4"
django-nested-admin = "^4.1.1"
isort = "^5.13.2"
black = "^24.10.0"
flake8 = "^7.1.1"
pylint = "^3.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
